--- a/mysite/mysite/templates/mysite/base.html
+++ b/mysite/mysite/templates/mysite/base.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock title %}</title>
-  <script src="{% static 'mysite/js/jquery-3.7.1.min.js.js'  %}"></script>
+    <script src="{% static 'mysite/js/jquery-3.7.1.min.js.js'  %}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
 
